# learn-python

./: .gitignore  README.md  pyproject.toml
learn_python/: cli.py  doing_things.py  server.py
learn_python/web/js/: app.js
learn_python/web/templates/: index.html
src/: server.py
src/web/: app.js
src/web/templates/: index.html
