[tool.poetry]
name = "learn-python"
version = "0.0.1"
description = "Help people learn Python that's useful"
authors = [
    "Travis Woodrow <twoody2007@gmail.com>",
]



[tool.poetry.scripts]
learn-python = "src.cli:cli"


[tool.poetry.dependencies]
python = "^3.10"



[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
