[tool.poetry]
name = "learn_python"
version = "0.0.1"
description = "Help people learn Python that's useful"
authors = [
    "Travis Woodrow <twoody2007@gmail.com>",
]



[tool.poetry.scripts]
cli = "learn_python.cli:cli"


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
Jinja2 = "^3.1.2"
click = "^8.1.3"
uvicorn = "^0.17.6"



[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
